virt01/manual/media/droppedneedle-dev/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dn-dev
  labels:
    app: dn-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dn-dev
  template:
    metadata:
      labels:
        app: dn-dev
    spec:
      serviceAccountName: dn-sa
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      containers:
        - name: dn-dev
          image: ghcr.io/droppedneedle/droppedneedle:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8688
          volumeMounts:
            - name: dn-dev-config
              mountPath: /app/config
            - name: dn-dev-cache
              mountPath: /app/cache
            - name: music-clean
              mountPath: /Cleaned
            - name: picard-post
              mountPath: /PicardPost
            - name: slskd
              mountPath: /slskd/downloads
      volumes:
        - name: dn-dev-config
          persistentVolumeClaim:
            claimName: dn-dev-config-pvc
        - name: dn-dev-cache
          persistentVolumeClaim:
            claimName: dn-dev-cache-pvc
        - name: music-clean
          hostPath:
            path: /mnt/ssd01/Music/Cleaned
            type: Directory
        - name: picard-post
          hostPath:
            path: /mnt/ssd01/Music/PicardPost
            type: Directory
        - name: slskd
          hostPath:
            path: /mnt/ssd01/Music/downloads/slskd
            type: Directory
