virt01/manual/media/droppedneedle-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dn-dev-svc
spec:
  selector:
    app: dn-dev
  ports:
    - name: http
      protocol: TCP
      port: 8688
      targetPort: 8688
