virt01/manual/media/droppedneedle-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dn-dev-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
    - host: dn-dev.k3s.nf.lab
      http:
        paths:
          - backend:
              service:
                name: dn-dev-svc
                port:
                  number: 8688
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dn-dev.k3s.nf.lab
      secretName: dn-dev-cert-tls
